# pickyrobots

./: .gitignore  README  README.md  _dummy-aDE5AJTbKk5nkDyHjk5JD9_6.pth  exit  requirements.txt
mapf-benchmark/: .gitignore  .gitmodules  CMakeLists.txt  README  benchmark-format.txt  outputreader.py  results_output.csv
mapf-benchmark/build-release/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  mapf-dataset  soplex-config.cmake  soplex-targets.cmake  soplex_update_githash.cmake
mapf-benchmark/build-release/mapf-solvers/: Makefile  cmake_install.cmake
mapf-benchmark/build-release/mapf_common/: Makefile  cmake_install.cmake
mapf-benchmark/build-release/scip/: config.h
mapf-benchmark/build-release/soplex/: soplex-config.cmake
mapf-benchmark/data/model/: None_dummy-93iq1npl.onnx.data
mapf-benchmark/data/problems/: generate_manifest.py  manifest.jsonl  scenewrite.py
mapf-benchmark/data/problems/maps/: multi_map_500x500_d0.01_0.10_0.15_0.60_0.55_1779859637.map  multi_map_500x500_d0.01_0.10_0.55_0.15_0.60_1779859387.map  multi_map_500x500_d0.01_0.10_0.55_0.60_0.15_1779859506.map  multi_map_500x500_d0.01_0.10_0.60_0.15_0.55_1779859390.map  multi_map_500x500_d0.01_0.10_0.60_0.15_0.55_1779859490.map  multi_map_500x500_d0.01_0.10_0.60_0.15_0.55_1779859500.map  multi_map_500x500_d0.01_0.10_0.60_0.15_0.55_1779859623.map  multi_map_500x500_d0.01_0.15_0.10_0.55_0.60_1779859571.map  multi_map_500x500_d0.01_0.15_0.55_0.10_0.60_1779859639.map  multi_map_500x500_d0.01_0.15_0.60_0.55_0.10_1779859392.map  multi_map_500x500_d0.01_0.55_0.10_0.15_0.60_1779859484.map  multi_map_500x500_d0.01_0.55_0.15_0.10_0.60_1779859407.map  multi_map_500x500_d0.01_0.55_0.60_0.15_0.10_1779859400.map  multi_map_500x500_d0.01_0.55_0.60_0.15_0.10_1779859618.map  multi_map_500x500_d0.01_0.60_0.15_0.10_0.55_1779859560.map  multi_map_500x500_d0.01_0.60_0.55_0.10_0.15_1779859622.map  multi_map_500x500_d0.01_0.60_0.55_0.15_0.10_1779859581.map  multi_map_500x500_d0.10_0.01_0.15_0.55_0.60_1779859416.map  multi_map_500x500_d0.10_0.01_0.15_0.55_0.60_1779859445.map  multi_map_500x500_d0.10_0.01_0.15_0.55_0.60_1779859634.map  multi_map_500x500_d0.10_0.01_0.15_0.60_0.55_1779859617.map  multi_map_500x500_d0.10_0.15_0.01_0.55_0.60_1779859644.map  multi_map_500x500_d0.10_0.15_0.01_0.60_0.55_1779859629.map  multi_map_500x500_d0.10_0.15_0.55_0.01_0.60_1779859409.map  multi_map_500x500_d0.10_0.15_0.55_0.60_0.01_1779859612.map  multi_map_500x500_d0.10_0.15_0.60_0.01_0.55_1779859574.map  multi_map_500x500_d0.10_0.15_0.60_0.55_0.01_1779859632.map  multi_map_500x500_d0.10_0.55_0.01_0.15_0.60_1779859642.map  multi_map_500x500_d0.10_0.55_0.01_0.60_0.15_1779859586.map  multi_map_500x500_d0.10_0.55_0.01_0.60_0.15_1779859635.map  multi_map_500x500_d0.10_0.55_0.15_0.01_0.60_1779859440.map  multi_map_500x500_d0.10_0.55_0.15_0.01_0.60_1779859645.map  multi_map_500x500_d0.10_0.55_0.15_0.60_0.01_1779859591.map  multi_map_500x500_d0.10_0.55_0.60_0.01_0.15_1779859380.map  multi_map_500x500_d0.10_0.55_0.60_0.15_0.01_1779859583.map  multi_map_500x500_d0.10_0.55_0.60_0.15_0.01_1779859630.map  multi_map_500x500_d0.10_0.60_0.01_0.15_0.55_1779859412.map  multi_map_500x500_d0.10_0.60_0.55_0.01_0.15_1779859539.map  multi_map_500x500_d0.15_0.01_0.10_0.55_0.60_1779859462.map  multi_map_500x500_d0.15_0.01_0.10_0.55_0.60_1779859588.map  (+356 more)
mapf-benchmark/data/problems/scenarios/: multi_map_500x500_d0.01_0.10_0.60_0.15_0.55_1779859623.scen  multi_map_500x500_d0.01_0.55_0.60_0.15_0.10_1779859618.scen  multi_map_500x500_d0.01_0.60_0.15_0.10_0.55_1779859560.scen  multi_map_500x500_d0.10_0.15_0.01_0.55_0.60_1779859644.scen  multi_map_500x500_d0.10_0.15_0.55_0.01_0.60_1779859409.scen  multi_map_500x500_d0.10_0.15_0.60_0.55_0.01_1779859632.scen  multi_map_500x500_d0.10_0.55_0.15_0.01_0.60_1779859645.scen  multi_map_500x500_d0.15_0.01_0.10_0.60_0.55_1779859613.scen  multi_map_500x500_d0.15_0.60_0.10_0.01_0.55_1779859429.scen  multi_map_500x500_d0.15_0.60_0.10_0.01_0.55_1779859434.scen  multi_map_500x500_d0.55_0.01_0.60_0.15_0.10_1779859627.scen  multi_map_500x500_d0.55_0.10_0.01_0.60_0.15_1779859598.scen  multi_map_500x500_d0.55_0.15_0.01_0.10_0.60_1779859590.scen  multi_map_500x500_d0.55_0.15_0.10_0.60_0.01_1779859473.scen  multi_map_500x500_d0.55_0.15_0.60_0.01_0.10_1779859610.scen  multi_map_500x500_d0.55_0.60_0.01_0.10_0.15_1779859397.scen  multi_map_500x500_d0.55_0.60_0.01_0.15_0.10_1779859555.scen  multi_map_500x500_d0.55_0.60_0.01_0.15_0.10_1779859597.scen  multi_map_500x500_d0.55_0.60_0.10_0.01_0.15_1779859511.scen  multi_map_500x500_d0.55_0.60_0.10_0.15_0.01_1779859595.scen  multi_map_500x500_d0.60_0.01_0.10_0.15_0.55_1779859385.scen  multi_map_500x500_d0.60_0.01_0.15_0.55_0.10_1779859411.scen  multi_map_500x500_d0.60_0.01_0.15_0.55_0.10_1779859528.scen  multi_map_500x500_d0.60_0.10_0.01_0.55_0.15_1779859602.scen  (+74 more)
mapf-benchmark/include/: agent.h  grid.h  mapfaster_encoder.h  mapfaster_valuation.h  pos.h  valuation.h
mapf-benchmark/src/: agent.cpp  main.cpp  manifest.cpp  mapfaster_encode.cpp
mapf-common/: CMakeLists.txt
mapf-common/include/mapf-common/: agent.h  grid.h  map_reader.h  pos.h  scenario_reader.h  solution.h  solution_writer.h
mapf-common/include/mapf_common/: agent.h  grid.h  map_reader.h  pos.h  scenario_reader.h  solution.h  solution_writer.h
mapf-common/src/: map_reader.cpp  scenario_reader.cpp  solution_writer.cpp
mapf-solvers/: .gitignore  CMakeLists.txt
mapf-solvers/solvers/CBSH2-RTC/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cbs.slnx  cbs.vcxproj  cmake_install.cmake
mapf-solvers/solvers/ConflictBasedSearch/: HighLevelSolver.cpp  LowLevelSolver.cpp  LowLevelSolver.h  conflictbasedsearch.cpp  conflictbasedsearch.h
mapf-solvers/solvers/bcp-mapf/: CMakeLists.txt
mapf-solvers/src/: api.cpp  api.h  main.cpp  solvers.cpp  solvers.h
mapf_common/: CMakeLists.txt
mapf_common/include/mapf_common/: pos.h  solution.h
mapf_common/src/: map_reader.cpp  scenario_reader.cpp  solution_writer.cpp
(+420 files in other folders)
